fix:all bugs fixed

--- a/index.html
+++ b/index.html
@@ -13,15 +13,7 @@
       <input class="input" type="text" placeholder="Ex. Armenia" />
       <button class="btn">SEARCH</button>
     </div>
-    <div class="body">
-      <div class="card">
-        <img src="" alt="flag" />
-        <h3>Name -</h3>
-        <h4>Capital -</h4>
-        <h4>Population -</h4>
-        <h4>Area -</h4>
-        <h4>Region -</h4>
-      </div>
-    </div>
+    <div class="not-found"><h1>Not found</h1></div>
+    <div class="body"></div>
   </body>
 </html>
